added Magic eraser flags

--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,12 @@
 enable-magisk-update = false   # set this to false if you do not want to receive updates for the module in magisk app
 
 # add 'enabled = false' for not patching a specific app or remove it from the config
-# see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
+# see https://github.com/j-hc/revanced-magisk-module/main/CONFIG.md for more detailed explanations
 
 # you can use rvmm-config-gen to generate a config
 
 [Google Photos]
+version = "auto"
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/photos/"
+included-patches = "'com.google.android.apps.photos.nexus_preload' 'com.google.android.apps.photos.NEXUS_PRELOAD' 'com.google.android.feature.PIXEL_2021_EXPERIENCE' 'comm.google.android.feature.PIXEL_2022_EXPERIENCE'"
 arch = "both"
-
